
SUBDIRS = \
	InfraStack/OSDependent/Linux/OSAL \
	InfraStack/OSDependent/Linux/InfraStackModules/IPCs \
	InfraStack/OSAgnostic/Common/CommonServices \
	InfraStack/OSAgnostic/Common/L4Common \
	InfraStack/OSAgnostic/Product/PipeHandler \
	InfraStack/OSAgnostic/WiMax/Agents/Supplicant \
	InfraStack/OSAgnostic/WiMax/Agents/NDnS \
	InfraStack/OSAgnostic/Product/Instrumantation \
	InfraStack/OSAgnostic/Product/AppSrvInfra \
	InfraStack/OSAgnostic/WiMax/Wrappers/iWmxSDK \
	InfraStack/OSDependent/Linux/wimaxcu \
	InfraStack/OSDependent/Linux/wimax_utils/wimax_monitor

man_MANS = $(srcdir)/InfraStack/OSDependent/Linux/manpage/wimaxcu.1 \
	   $(srcdir)/InfraStack/OSDependent/Linux/manpage/wimaxd.1
